# ChangeLog for x11-proto/trapproto
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-proto/trapproto/ChangeLog,v 1.26 2006/07/19 12:41:40 gmsoft Exp $

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> trapproto-3.4.3.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> trapproto-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  trapproto-3.4.3.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  trapproto-3.4.3.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-trapproto-3.4.3, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  trapproto-3.4.3.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> trapproto-3.4.3.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  trapproto-3.4.3.ebuild:
  x86 stable.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> trapproto-3.4.3.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  trapproto-3.4.3.ebuild:
  (#127306) Digests changed between release candidates and final release for
  the same tarballs.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> trapproto-3.4.3.ebuild:
  Mark 3.4.3 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> trapproto-3.4.3.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  trapproto-3.4.3.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -trapproto-3.4.2.ebuild:
  Pull old versions.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org> trapproto-3.4.3.ebuild:
  Marked ~alpha

*trapproto-3.4.3 (17 Dec 2005)

  17 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>