@@ -1,3 +1,3 @@
-MD5 3b713239e5e6b269b31cb665563358df trapproto-3.4.3.tar.bz2 48785
-RMD160 f4adc2687aabd0f6e69fde6949675930ad241869 trapproto-3.4.3.tar.bz2 48785
-SHA256 ff32a0d3bc696cadc3457be9c85e9818af2b6daa2f159188bb01aad7e932a0e1 trapproto-3.4.3.tar.bz2 48785
+MD5 dc33d19c787b05761742cded7d7d221f trapproto-3.4.3.tar.bz2 48749
+RMD160 278860862c4ff2a2ad93d288d656eb84399e29c6 trapproto-3.4.3.tar.bz2 48749
+SHA256 f906e23a47fca7ce795c9fc75feb75a8fe6d34ef7f3154a08ad6b603fc9d9eb6 trapproto-3.4.3.tar.bz2 48749
