@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-proto/trapproto/trapproto-3.4.3.ebuild,v 1.15 2006/09/10 08:50:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/trapproto/trapproto-3.4.3.ebuild,v 1.16 2007/02/04 18:08:36 joshuabaergen Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,6 @@ inherit x-modular
 DESCRIPTION="X.Org Trap protocol headers"
 
 KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos"
-RESTRICT="mirror"
 
 RDEPEND=""
 DEPEND="${RDEPEND}"
